[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pct"
version = "0.1.0"
description = "A simple Point Cloud Transformer for latent feature learning and regression"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12",
    "numpy",
    "plotly",
    "nbformat"
]